# Bunch

./: .gitignore  README.md  SUPABASE_MIGRATION.md
.github/workflows/: django.yml  docs.yml  playwright.yml
apps/web/bunch/: .env.example  .gitignore  README.md  biome.json  bun.lockb  components.json  middleware.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts
docs/: README.md  biome.json  index.html  package.json  vite.config.ts
docs/public/: site.webmanifest
docs/src/: App.svelte  app.css  bunch.css
docs/src/components/: BottomDivider.svelte  FooterLower.svelte  Hero.svelte  (+3 more)
server/: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  run_daphne.py  run_integration_tests.ps1  run_integration_tests.sh  vercel.json
server/api/: index.py
server/bunch/: admin.py  apps.py  constants.py  consumers.py  models.py  permissions.py  serializers.py  settings.py  signals.py  test_bunch.py  test_channels.py  test_common.py  test_members.py  test_messages.py  test_models.py  test_reactions.py  urls.py  views.py
server/bunch/migrations/: 0001_initial.py  0002_alter_member_role.py  0003_alter_bunch_options_alter_channel_options_and_more.py  0004_bunch_primary_color.py  0005_alter_bunch_primary_color_reaction.py  0006_message_reply_to.py  0007_alter_reaction_emoji.py
server/core/: urls.py  views.py
server/orchard/: asgi.py  authentication.py  middleware.py  routing.py  services.py  settings.py  urls.py  wsgi.py
server/tests/integration/: test_clerk_auth.py
server/users/: admin.py  models.py  serializers.py  test_models.py  test_serializers.py  test_users.py  urls.py  views.py
server/users/migrations/: 0004_alter_user_avatar_alter_user_color_and_more.py  0005_alter_user_options.py  0006_user_display_name_user_onboarded.py
(+70 files in other folders)
