[project]
name = "orchard"
version = "0.1.0"
description = "Server for bunch. Written in django"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.0",
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "django-types>=0.20.0",
    "djangorestframework-stubs>=3.15.3",
]

[tool.ruff]
line-length = 60
indent-width = 4
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
extend-select = ["I", "E501"]
exclude = ["**/migrations/*.py"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
