[project]
name = "orchard"
version = "0.1.0"
description = "Server for bunch. Written in django."
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.2.1",
    "cryptography>=44.0.3",
    "daphne>=4.2.0",
    "django>=6.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "pillow>=11.1.0",
    "psycopg[pool]>=3.3.2",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.1.0",
    "supabase>=2.16.0",
]

[dependency-groups]
dev = [
    "django-types>=0.22.0",
    "djangorestframework-stubs>=3.16.6",
    "types-channels>=4.3.0.20250822",
]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
extend-select = ["I", "E501"]
exclude = ["**/migrations/*.py"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
